--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-
-scikit-learn
-st-pages
+img2vec-pytorch
+st-pages  # Replace with the correct package name if different
 nltk
-
+streamlit
+scikit-learn==1.4.2
